--- a/Aprendo con Molly/colores.xaml
+++ b/Aprendo con Molly/colores.xaml
@@ -1604,5 +1604,6 @@
         		</Rectangle.Fill>
         	</Rectangle>
         </Canvas>
+        <Image Margin="0,0,494,614"  Stretch="Fill"/>
     </Grid>
 </Window>
